--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,37 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@font-face{
+  font-family: font2;
+  src: url(./MonumentExtended-Regular.otf);
+
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+  color:white;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+html,body{
+  height:100%;
+  width:100%
+}
+
+#loader{
+  height:100vh;
+  width:100vw;
+  background-color: rgb(0, 0, 0);
+  position:fixed;
+  z-index:2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+#loader h1{
+  font-size:100px;
+  font-weight:100;
+  font-family:font2;
 }
