--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,6 @@
 @font-face{
   font-family: font2;
   src: url(./MonumentExtended-Regular.otf);
-
 }
 
 *{
@@ -13,7 +12,7 @@
   padding:0;
   box-sizing: border-box;
   color:white;
-  font-family:font2;
+  font-family: font2;
 }
 
 html,body{
@@ -30,10 +29,11 @@ html,body{
   display: flex;
   align-items: center;
   justify-content: center;
+  gap:10px;
 
 }
 #loader h1{
-  font-size:100px;
-  font-weight:100;
+  font-size:30px;
+  font-weight:600;
 
 }
