--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,23 +16,5 @@
 
 html,body{
   height:100%;
-  width:100%
-}
-
-#loader{
-  height:100vh;
-  width:100vw;
-  background-color: rgb(0, 0, 0);
-  position:fixed;
-  z-index:2;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap:10px;
-
-}
-#loader h1{
-  font-size:30px;
-  font-weight:600;
-
+  width:100%;
 }
