hero section almost done

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,8 @@ html,body{
   width:100%;
   background-color: black;
 }
-
-.hero{
+ 
+/* #heromain{
   -webkit-text-fill-color: transparent;
   -webkit-background-clip:text;
-}
+}  */
