--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,7 @@ html,body{
   background-color: black;
 }
  
-/* #heromain{
+#heromain{
   -webkit-text-fill-color: transparent;
   -webkit-background-clip:text;
-}  */
+} 
