--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@ html,
 body {
   height: 100%;
   width: 100%;
-  background-color: black;
+  background-color: #12121c;
 }
 
 @media (min-width: 1280px) {
